Update index.html navigation

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
         <h1>The Odin Project - Course Notes</h1>
     <p>This is my collection of notes from completing <a href="https://www.theodinproject.com" target="_blank" rel="noopener noreferrer">The Odin Project</a> curriculum for software development.</p>
     <!-- A link to another website is called an absolute link. A link to a page within the same site is called a relative link. -->
-    <p><a href="pages/resources.html">Resources</a></p>
-    <p><a href="pages/git-commands.html">Git Commands</a></p>
-    <p><a href="pages/about-me.html">About Me</a></p>
-    <p><a href="pages/course-log.html" target="_blank" rel="noopener noreferrer">My Course Log</a> - last updated 10/3/2023.</p>
+    <div class="nav adjust-font-size">
+    <a href="pages/resources.html">Resources</a>
+    <a href="pages/git-commands.html">Git Commands</a>
+    <a href="pages/about-me.html">About Me</a>
+    <a href="pages/course-log.html" target="_blank" rel="noopener noreferrer">My Course Log</a>
     <!-- The "target" above tells the browser to open the link in a new tab. The "rel" above gives security to it by not referencing the source page. -->
     <!-- "noopener" prevents phishing attacks. It is recommended to ALWAYS us rel="noopener noreferrer" when using the target="_blank" attribute. -->
     <!-- Look at that! Ctrl + / make comment tags! -->
-    <h2>Practice Projects</h2>
+    </div>
+    <p style="text-align: center">Last updated 10/4/2023.</p>
+<h2>Practice Projects</h2>
     <ul>
-        <li><a href="https://mandi628.github.io/odin-recipes">Odin Recipe Project</a> - plan to update with future skills</li>
+        <li><a href="https://mandi628.github.io/odin-recipes">Odin Recipe Project</a> - plan to update with future skills. Can also be viewed as a <a href="https://mandi628.github.io/odin-recipes">live webpage</a>.</li>
         <li><a href="./pages/css-methods.html">CSS Methods</a></li>
         <li><a href="./pages/chain-selectors.html">Chaining Selectors (CSS)</a></li>
         <li><a href="./pages/desc-combin.html">Descendant Combinators (CSS)</a></li>
