Organize pages better & update index.html links

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <h2>Practice Projects</h2>
     <ul>
         <li><a href="https://mandi628.github.io/odin-recipes">Odin Recipe Project</a> - plan to update with future skills. Can also be viewed as a <a href="https://mandi628.github.io/odin-recipes">live webpage</a>.</li>
-        <li><a href="./pages/css-methods.html">CSS Methods</a></li>
-        <li><a href="./pages/chain-selectors.html">Chaining Selectors (CSS)</a></li>
-        <li><a href="./pages/desc-combin.html">Descendant Combinators (CSS)</a></li>
-        <li><a href="./pages/cascade.html">Cascade Fix</a></li>
+        <li><a href="./practice/css-methods.html">CSS Methods</a></li>
+        <li><a href="./practice/chain-selectors.html">Chaining Selectors (CSS)</a></li>
+        <li><a href="./practice/desc-combin.html">Descendant Combinators (CSS)</a></li>
+        <li><a href="./practice/cascade.html">Cascade Fix</a></li>
     </ul>
     
 </body>
