--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -15,7 +15,7 @@
     <p><a href="#2023-10">October 2023</a></p>
     <h2 id="2023-10">October 2023</h2>
     <h3>2023.10.04, Wednesday</h3>
-    <p>Completed the CSS intro material and updated my <a href="https://mandi628.github.io/odin-recipes">recipes repo</a>.</p>
+    <p>Completed the CSS intro material and updated my <a href="https://mandi628.github.io/odin-recipes">recipes repo</a>. I would like to organize the practice pages a little better, but I'm not sure the best way. Probably just moving them to another folder.</p>
     <hr>
     <h3>2023.10.03, Tuesday</h3>
     <p>Made a lot of progress today. Figured out how to get VSCode working the way I expect it to.
