Update from new course material
Added margin and padding practice to style.css. Added resources
from course material. Updated index links.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <p>This is my collection of notes from completing <a href="https://www.theodinproject.com" target="_blank" rel="noopener noreferrer">The Odin Project</a> curriculum for software development.</p>
     <!-- A link to another website is called an absolute link. A link to a page within the same site is called a relative link. -->
     <div class="nav adjust-font-size">
-    <a href="pages/resources.html">Resources</a>
-    <a href="pages/git-commands.html">Git Commands</a>
-    <a href="pages/about-me.html">About Me</a>
-    <a href="pages/course-log.html" target="_blank" rel="noopener noreferrer">My Course Log</a>
+    <a class="menu" href="pages/resources.html">Resources</a>
+    <a class="menu" href="pages/git-commands.html">Git Commands</a>
+    <a class="menu" href="pages/about-me.html">About Me</a>
+    <a class="menu" href="pages/course-log.html" target="_blank" rel="noopener noreferrer">My Course Log</a>
     <!-- The "target" above tells the browser to open the link in a new tab. The "rel" above gives security to it by not referencing the source page. -->
     <!-- "noopener" prevents phishing attacks. It is recommended to ALWAYS us rel="noopener noreferrer" when using the target="_blank" attribute. -->
     <!-- Look at that! Ctrl + / make comment tags! -->
@@ -20,7 +20,7 @@
     <p style="text-align: center">Last updated 10/4/2023.</p>
 <h2>Practice Projects</h2>
     <ul>
-        <li><a href="https://mandi628.github.io/odin-recipes">Odin Recipe Project</a> - plan to update with future skills. Can also be viewed as a <a href="https://mandi628.github.io/odin-recipes">live webpage</a>.</li>
+        <li><a href="https://mandi628.github.io/odin-recipes">Odin Recipe Project</a> - plan to update with future skills.</li>
         <li><a href="./practice/css-methods.html">CSS Methods</a></li>
         <li><a href="./practice/chain-selectors.html">Chaining Selectors (CSS)</a></li>
         <li><a href="./practice/desc-combin.html">Descendant Combinators (CSS)</a></li>
