--- a/pages/resources.html
+++ b/pages/resources.html
@@ -36,6 +36,8 @@
             <li><a href="https://validator.w3.org/">HTML validator</a>, or <a href="https://www.freeformatter.com/html-validator.html">this one</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Values_and_units">CSS Building Blocks - Values and Units</a></li>
             <li><a href="https://www.w3schools.com/cssref/css_websafe_fonts.php">CSS Web Safe Fonts</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference">Mozilla CSS Properties Reference</a></li>
+            <li><a href="https://developers.google.com/web/tools/chrome-devtools">Official Chrome DevTools Documentation</a></li>
         </ul>
     <h1>Other Project Sharing Services</h1>
     <p>Places to share source files, besides <a href="https://www.github.com">GitHub</a>.</p>
