Update to menu coding

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>The Odin Project - Course Notes</h1>
     <p>This is my collection of notes from completing <a href="https://www.theodinproject.com" target="_blank" rel="noopener noreferrer">The Odin Project</a> curriculum for software development.</p>
     <!-- A link to another website is called an absolute link. A link to a page within the same site is called a relative link. -->
-    <div class="nav adjust-font-size">
+    <nav class="adjust-font-size">
     <a class="menu" href="pages/resources.html">Resources</a>
     <a class="menu" href="pages/git-commands.html">Git Commands</a>
     <a class="menu" href="pages/about-me.html">About Me</a>
@@ -16,7 +16,7 @@
     <!-- The "target" above tells the browser to open the link in a new tab. The "rel" above gives security to it by not referencing the source page. -->
     <!-- "noopener" prevents phishing attacks. It is recommended to ALWAYS us rel="noopener noreferrer" when using the target="_blank" attribute. -->
     <!-- Look at that! Ctrl + / make comment tags! -->
-    </div>
+    </nav>
     <p style="text-align: center">Last updated 10/4/2023.</p>
 <h2>Practice Projects</h2>
     <ul>
