Update menu & course log

--- a/pages/git-commands.html
+++ b/pages/git-commands.html
@@ -5,12 +5,12 @@
         <title>Git Commands for Coding in the Command Line</title>
     </head>
     <body>
-        <div class="nav adjust-font-size">
+        <nav>
             <a href="../index.html">Index</a>
             <a href="resources.html">Resources</a>
             <a href="git-commands.html">Git Commands</a>
             <a href="about-me.html">About Me</a>
-        </div>
+        </nav>
         <h1>Git Commands for Coding in the Command Line</h1>
     <ul>
         <li class="list">To clone a repository, copy repository address from GitHub or <pre class="code">$ git clone git@github.com:USER-NAME/REPOSITORY-NAME.git</pre></li>
