--- a/pages/resources.html
+++ b/pages/resources.html
@@ -5,12 +5,12 @@
         <title>The Odin Project - Resources</title>
     </head>
     <body>
-        <div class="nav adjust-font-size">
+        <nav>
             <a href="../index.html">Index</a>
             <a href="resources.html">Resources</a>
             <a href="git-commands.html">Git Commands</a>
             <a href="about-me.html">About Me</a>
-        </div>
+        </nav>
     <h1>List of Resources to checkout</h1>
     <p>All resources, unless otherwise notes, are from <a href="https://www.theodinproject.com">The Odin Project</a>.</p>
     <h2>Command Line Info</h2>
@@ -38,6 +38,7 @@
             <li><a href="https://www.w3schools.com/cssref/css_websafe_fonts.php">CSS Web Safe Fonts</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference">Mozilla CSS Properties Reference</a></li>
             <li><a href="https://developers.google.com/web/tools/chrome-devtools">Official Chrome DevTools Documentation</a></li>
+            <li><a href="https://www.w3schools.com/html/html_blocks.asp">HTML Block & Inline Elements</a></li>
         </ul>
     <h1>Other Project Sharing Services</h1>
     <p>Places to share source files, besides <a href="https://www.github.com">GitHub</a>.</p>
