--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- "noopener" prevents phishing attacks. It is recommended to ALWAYS us rel="noopener noreferrer" when using the target="_blank" attribute. -->
     <!-- Look at that! Ctrl + / make comment tags! -->
     </nav>
-    <p style="text-align: center">Last updated 10/4/2023.</p>
+    <p style="text-align: center">Last updated 10/5/2023.</p>
 <h2>Practice Projects</h2>
     <ul>
         <li><a href="https://mandi628.github.io/odin-recipes">Odin Recipe Project</a> - plan to update with future skills.</li>
@@ -25,6 +25,7 @@
         <li><a href="./practice/chain-selectors.html">Chaining Selectors (CSS)</a></li>
         <li><a href="./practice/desc-combin.html">Descendant Combinators (CSS)</a></li>
         <li><a href="./practice/cascade.html">Cascade Fix</a></li>
+        <li><a href="./practice/boxmodel.html">The Box Model</a></li>
     </ul>
     
 </body>
