--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -5,12 +5,12 @@
         <title>About Me</title>
     </head>
     <body>
-        <div class="nav adjust-font-size">
+        <nav>
             <a href="../index.html">Index</a>
             <a href="resources.html">Resources</a>
             <a href="git-commands.html">Git Commands</a>
             <a href="about-me.html">About Me</a>
-        </div>
+        </nav>
     <h1>About Me</h1>
 
         <h2>Bio</h2>
