--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,12 +5,13 @@
         <title>The Odin Project - Course Notes</title>
     </head>
     <body>
-        <div class="nav adjust-font-size">
+        <nav>
             <a href="../index.html">Index</a>
             <a href="resources.html">Resources</a>
             <a href="git-commands.html">Git Commands</a>
             <a href="about-me.html">About Me</a>
-        </div>    <h1>The Odin Project - Course Notes</h1>
+        </nav>
+    <h1>The Odin Project - Course Notes</h1>
     <p>This is my collection of notes from completing <a href="https://www.theodinproject.com">The Odin Project</a> curriculum for software development.</p>
     <a href="../index.html">Back to Index</a>
 </body>
