--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -5,15 +5,25 @@
         <title>The Odin Project - Course Log</title>
     </head>
     <body>
-        <div class="nav adjust-font-size">
+        <nav>
         <a href="../index.html">Index</a>
         <a href="resources.html">Resources</a>
         <a href="git-commands.html">Git Commands</a>
         <a href="about-me.html">About Me</a>
-    </div>
+        </nav>
     <h1>My Odin Project Course Log</h1>
     <p><a href="#2023-10">October 2023</a></p>
     <h2 id="2023-10">October 2023</h2>
+    <h3>2023.10.05, Thursday</h3>
+    <p><a href="https://www.theodinproject.com/lessons/foundations-block-and-inline">Foundations Course: Block and Inline</a> - read material and watched tutorials. Learned that I did my navigation wrong for this group of pages. Correcting now. Added <a href="../practice/boxmodel.html">Box Model</a> page to demonstrate the concept.</p>
+    <p>Margins are great for positioning items on a page. If only one value is given, the command assumes application on all four sides: <code>margin: 1.5em</code>. If defining margins individually, you can use:</p>
+    <ul>
+        <li><code>margin: top right bottom left</code>, or</li>
+        <li><code>margin-top</code>, <code>margin-right</code>, <code>margin-bottom</code>, or <code>margin-left</code></li>
+        <li>A valur of <code>auto</code> can also be used, but a set width of the element is required. This is only useful for horizontal centering.</li>
+        <li>Vertical margins will overlap, or collapse, and have a total value of the larger of the two set values.</li>
+    </ul>
+    <hr>
     <h3>2023.10.04, Wednesday</h3>
     <p>Completed the CSS intro material and updated my <a href="https://mandi628.github.io/odin-recipes">recipes repo</a>. I would like to organize the practice pages a little better, but I'm not sure the best way. Probably just moving them to another folder. (DONE)</p>
     <hr>
