Update all nav with .menu specifics

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <nav>
-            <a href="../index.html">Index</a>
-            <a href="resources.html">Resources</a>
-            <a href="git-commands.html">Git Commands</a>
-            <a href="about-me.html">About Me</a>
+            <a class="menu" href="../index.html">Index</a>
+            <a class="menu" href="resources.html">Resources</a>
+            <a class="menu" href="git-commands.html">Git Commands</a>
+            <a class="menu" href="about-me.html">About Me</a>
         </nav>
     <h1>About Me</h1>
 
@@ -33,6 +33,6 @@
     <img src="../images/dog.jpg" alt="Odin's dog, Charles" height="150px" width="150px">
     <!-- Images MUST include alt text attribute for accessibility. -->
     <!-- It's also best practices to always include height & width parameters on images. -->
-    <a href="../index.html">Back to Index</a>
+    <a class="menu" href="../index.html">Back to Index</a>
    </body>
 </html>
