--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <nav>
-        <a href="../index.html">Index</a>
-        <a href="resources.html">Resources</a>
-        <a href="git-commands.html">Git Commands</a>
-        <a href="about-me.html">About Me</a>
+        <a class="menu" href="../index.html">Index</a>
+        <a class="menu" href="resources.html">Resources</a>
+        <a class="menu" href="git-commands.html">Git Commands</a>
+        <a class="menu" href="about-me.html">About Me</a>
         </nav>
     <h1>My Odin Project Course Log</h1>
     <p><a href="#2023-10">October 2023</a></p>
@@ -23,6 +23,7 @@
         <li>A valur of <code>auto</code> can also be used, but a set width of the element is required. This is only useful for horizontal centering.</li>
         <li>Vertical margins will overlap, or collapse, and have a total value of the larger of the two set values.</li>
     </ul>
+    <p>Learned about <code>display: inline;</code> vs. <code>display: block;</code> vs. <code>display: inline-block;</code></p>
     <hr>
     <h3>2023.10.04, Wednesday</h3>
     <p>Completed the CSS intro material and updated my <a href="https://mandi628.github.io/odin-recipes">recipes repo</a>. I would like to organize the practice pages a little better, but I'm not sure the best way. Probably just moving them to another folder. (DONE)</p>
@@ -51,6 +52,6 @@
     <p>Completed the Recipe Website Project in the Fundamentals Course.</p>
     <p>Continued into CSS portion of curriculum. Need to stop, though. Been at it about 8 hours today. Just couldn't stop!</p>
     <hr>
-    <a href="../index.html">Back to Index</a>
+    <a class="menu" href="../index.html">Back to Index</a>
     </body>
 </html>
