--- a/pages/resources.html
+++ b/pages/resources.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <nav>
-            <a href="../index.html">Index</a>
-            <a href="resources.html">Resources</a>
-            <a href="git-commands.html">Git Commands</a>
-            <a href="about-me.html">About Me</a>
+            <a class="menu" href="../index.html">Index</a>
+            <a class="menu" href="resources.html">Resources</a>
+            <a class="menu" href="git-commands.html">Git Commands</a>
+            <a class="menu" href="about-me.html">About Me</a>
         </nav>
     <h1>List of Resources to checkout</h1>
     <p>All resources, unless otherwise notes, are from <a href="https://www.theodinproject.com">The Odin Project</a>.</p>
@@ -53,6 +53,6 @@
         <li>#github</li>
         <li>#gitlab</li>
     </ul>
-<a href="../index.html">Back to Index</a>
+<a class="menu" href="../index.html">Back to Index</a>
 </body>
 </html>
