--- a/practice/boxmodel.html
+++ b/practice/boxmodel.html
@@ -11,6 +11,6 @@
     <p class="one">One</p>
 <p class="two">Two</p>
 <br>
-<a href="../index.html">Back to Index</a>
+<a class="menu" href="../index.html">Back to Index</a>
 </body>
 </html>
