--- a/practice/chain-selectors.html
+++ b/practice/chain-selectors.html
@@ -19,6 +19,6 @@
       <img class="original proportioned" src="../images/katho.jpg" alt="Woman with glasses">
       <img class="original distorted" src="../images/andrea.jpg" alt="Man with surprised expression">
     </div>
-    <a href="../index.html">Back to Index</a>
+    <a class="menu" href="../index.html">Back to Index</a>
   </body>
 </html>
