--- a/practice/css-methods.html
+++ b/practice/css-methods.html
@@ -21,6 +21,6 @@
 <h2>Grouping Selectors</h2>
 <a href="chain-selectors.html"><button class="click-me">Click Me!</button></a>
 <a href="../index.html"><button class="no-me" href="../index.html">No, Click Me!</button></a><br>
-<a href="../index.html">Back to Index</a>
+<a class="menu" href="../index.html">Back to Index</a>
 </body>
 </html>
