--- a/practice/desc-combin.html
+++ b/practice/desc-combin.html
@@ -17,6 +17,6 @@
       <p class="text">This should be styled.</p>
       <p class="text">This should be styled.</p>
     </div>
-    <a href="../index.html">Back to Index</a>
+    <a class="menu" href="../index.html">Back to Index</a>
   </body>
 </html>
