--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
         <title>The Odin Project - Course Notes</title>
     </head>
     <body>
+        <nav>
+            <a class="menu" href="pages/resources.html">Resources</a>
+            <a class="menu" href="pages/git-commands.html">Git Commands</a>
+            <a class="menu" href="pages/about-me.html">About Me</a>
+            <a class="menu" href="pages/course-log.html" target="_blank" rel="noopener noreferrer">My Course Log</a>
+            <!-- The "target" above tells the browser to open the link in a new tab. The "rel" above gives security to it by not referencing the source page. -->
+            <!-- "noopener" prevents phishing attacks. It is recommended to ALWAYS us rel="noopener noreferrer" when using the target="_blank" attribute. -->
+            <!-- Look at that! Ctrl + / make comment tags! -->
+            </nav>
         <h1>The Odin Project - Course Notes</h1>
     <p>This is my collection of notes from completing <a href="https://www.theodinproject.com" target="_blank" rel="noopener noreferrer">The Odin Project</a> curriculum for software development.</p>
     <!-- A link to another website is called an absolute link. A link to a page within the same site is called a relative link. -->
-    <nav class="adjust-font-size">
-    <a class="menu" href="pages/resources.html">Resources</a>
-    <a class="menu" href="pages/git-commands.html">Git Commands</a>
-    <a class="menu" href="pages/about-me.html">About Me</a>
-    <a class="menu" href="pages/course-log.html" target="_blank" rel="noopener noreferrer">My Course Log</a>
-    <!-- The "target" above tells the browser to open the link in a new tab. The "rel" above gives security to it by not referencing the source page. -->
-    <!-- "noopener" prevents phishing attacks. It is recommended to ALWAYS us rel="noopener noreferrer" when using the target="_blank" attribute. -->
-    <!-- Look at that! Ctrl + / make comment tags! -->
-    </nav>
     <p style="text-align: center">Last updated 10/5/2023.</p>
 <h2>Practice Projects</h2>
     <ul>
