--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,13 +6,13 @@
     </head>
     <body>
         <nav>
-            <a href="../index.html">Index</a>
-            <a href="resources.html">Resources</a>
-            <a href="git-commands.html">Git Commands</a>
-            <a href="about-me.html">About Me</a>
+            <a class="menu" href="../index.html">Index</a>
+            <a class="menu" href="resources.html">Resources</a>
+            <a class="menu" href="git-commands.html">Git Commands</a>
+            <a class="menu" href="about-me.html">About Me</a>
         </nav>
     <h1>The Odin Project - Course Notes</h1>
     <p>This is my collection of notes from completing <a href="https://www.theodinproject.com">The Odin Project</a> curriculum for software development.</p>
-    <a href="../index.html">Back to Index</a>
+    <a class="menu" href="../index.html">Back to Index</a>
 </body>
 </html>
