--- a/pages/git-commands.html
+++ b/pages/git-commands.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <nav>
-            <a href="../index.html">Index</a>
-            <a href="resources.html">Resources</a>
-            <a href="git-commands.html">Git Commands</a>
-            <a href="about-me.html">About Me</a>
+            <a class="menu" href="../index.html">Index</a>
+            <a class="menu" href="resources.html">Resources</a>
+            <a class="menu" href="git-commands.html">Git Commands</a>
+            <a class="menu" href="about-me.html">About Me</a>
         </nav>
         <h1>Git Commands for Coding in the Command Line</h1>
     <ul>
@@ -23,6 +23,6 @@
         <li class="list">To view a project log, <pre class="code">git log</pre></li>
     </ul>
     <p>NOTE: A best practice to keep in mind is to make <b>atomic commits</b>, meaning to focus on changing only one feature or task at a time.</p>
-<a href="../index.html">Back to Index</a>
+<a class="menu" href="../index.html">Back to Index</a>
 </body>
 </html>
