--- a/practice/cascade.html
+++ b/practice/cascade.html
@@ -18,6 +18,6 @@
     <div class="text">I'm a div with thin text and a child div!
       <div class="text child">I'm a smaller child div with extra bold text.</div>
     </div>
-    <a href="../index.html">Back to Index</a>
+    <a class="menu" href="../index.html">Back to Index</a>
   </body>
 </html>
