Add exiting files to GitHub

--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -23,7 +23,8 @@
         <li>A valur of <code>auto</code> can also be used, but a set width of the element is required. This is only useful for horizontal centering.</li>
         <li>Vertical margins will overlap, or collapse, and have a total value of the larger of the two set values.</li>
     </ul>
-    <p>Learned about <code>display: inline;</code> vs. <code>display: block;</code> vs. <code>display: inline-block;</code></p>
+    <p>Learned about <code>display: inline;</code> vs. <code>display: block;</code> vs. <code>display: inline-block;</code>. Updated <a href="https://mandi628.github.io/odin-recipes">Recipes Project</a>, as per assignment.</p>
+    <p><a href="https://www.theodinproject.com/lessons/foundations-introduction-to-flexbox">Foundations Course: Introduction to FlexBox</a></p>
     <hr>
     <h3>2023.10.04, Wednesday</h3>
     <p>Completed the CSS intro material and updated my <a href="https://mandi628.github.io/odin-recipes">recipes repo</a>. I would like to organize the practice pages a little better, but I'm not sure the best way. Probably just moving them to another folder. (DONE)</p>
