Add flexbox practice pages & links

--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -14,6 +14,9 @@
     <h1>My Odin Project Course Log</h1>
     <p><a href="#2023-10">October 2023</a></p>
     <h2 id="2023-10">October 2023</h2>
+    <h3>2023.10.06, Friday</h3>
+    <p><a href="https://www.theodinproject.com/lessons/foundations-introduction-to-flexbox">Foundations Course: Introduction to FlexBox</a> - played with flexboxes in my nav menu</p>
+    <hr>
     <h3>2023.10.05, Thursday</h3>
     <p><a href="https://www.theodinproject.com/lessons/foundations-block-and-inline">Foundations Course: Block and Inline</a> - read material and watched tutorials. Learned that I did my navigation wrong for this group of pages. Correcting now. Added <a href="../practice/boxmodel.html">Box Model</a> page to demonstrate the concept.</p>
     <p>Margins are great for positioning items on a page. If only one value is given, the command assumes application on all four sides: <code>margin: 1.5em</code>. If defining margins individually, you can use:</p>
@@ -24,7 +27,6 @@
         <li>Vertical margins will overlap, or collapse, and have a total value of the larger of the two set values.</li>
     </ul>
     <p>Learned about <code>display: inline;</code> vs. <code>display: block;</code> vs. <code>display: inline-block;</code>. Updated <a href="https://mandi628.github.io/odin-recipes">Recipes Project</a>, as per assignment.</p>
-    <p><a href="https://www.theodinproject.com/lessons/foundations-introduction-to-flexbox">Foundations Course: Introduction to FlexBox</a></p>
     <hr>
     <h3>2023.10.04, Wednesday</h3>
     <p>Completed the CSS intro material and updated my <a href="https://mandi628.github.io/odin-recipes">recipes repo</a>. I would like to organize the practice pages a little better, but I'm not sure the best way. Probably just moving them to another folder. (DONE)</p>
