--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="./practice/desc-combin.html">Descendant Combinators (CSS)</a></li>
         <li><a href="./practice/cascade.html">Cascade Fix</a></li>
         <li><a href="./practice/boxmodel.html">The Box Model</a></li>
+        <li><a href="./practice/flexbox.html">FlexBox Practice</a></li>
     </ul>
     
 </body>
