Completed Intro FlexBox lesson

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -39,6 +39,7 @@
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference">Mozilla CSS Properties Reference</a></li>
             <li><a href="https://developers.google.com/web/tools/chrome-devtools">Official Chrome DevTools Documentation</a></li>
             <li><a href="https://www.w3schools.com/html/html_blocks.asp">HTML Block & Inline Elements</a></li>
+            <li><a href="https://internetingishard.netlify.app/html-and-css/flexbox/index.html">FlexBox Tutorial | HTML & CSS Is Hard</a> - GREAT tutorial on FlexBox usage</li>
         </ul>
     <h1>Other Project Sharing Services</h1>
     <p>Places to share source files, besides <a href="https://www.github.com">GitHub</a>.</p>
