Complete Growing & Shrinking lesson

--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -15,7 +15,8 @@
     <p><a href="#2023-10">October 2023</a></p>
     <h2 id="2023-10">October 2023</h2>
     <h3>2023.10.06, Friday</h3>
-    <p><a href="https://www.theodinproject.com/lessons/foundations-introduction-to-flexbox">Foundations Course: Introduction to FlexBox</a> - played with flexboxes in my nav menu</p>
+    <p><a href="https://www.theodinproject.com/lessons/foundations-introduction-to-flexbox">Foundations Course: Introduction to FlexBox</a> - played with flexboxes in my nav menu. Great tutorial on the use of flexboxes.</p>
+    <p><a href="https://www.theodinproject.com/lessons/foundations-growing-and-shrinking">Foundations Course: Growing and Shrinking</a></p>
     <hr>
     <h3>2023.10.05, Thursday</h3>
     <p><a href="https://www.theodinproject.com/lessons/foundations-block-and-inline">Foundations Course: Block and Inline</a> - read material and watched tutorials. Learned that I did my navigation wrong for this group of pages. Correcting now. Added <a href="../practice/boxmodel.html">Box Model</a> page to demonstrate the concept.</p>
