Complete Alignment lesson

--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -16,7 +16,9 @@
     <h2 id="2023-10">October 2023</h2>
     <h3>2023.10.06, Friday</h3>
     <p><a href="https://www.theodinproject.com/lessons/foundations-introduction-to-flexbox">Foundations Course: Introduction to FlexBox</a> - played with flexboxes in my nav menu. Great tutorial on the use of flexboxes.</p>
-    <p><a href="https://www.theodinproject.com/lessons/foundations-growing-and-shrinking">Foundations Course: Growing and Shrinking</a></p>
+    <p><a href="https://www.theodinproject.com/lessons/foundations-growing-and-shrinking">Foundations Course: Growing and Shrinking</a> - discusses the values of <code>flex</code>, indicated <code>flex-grow</code>, <code>flex-shrink</code>, and <code>flex-basis</code></p>
+    <p><a href="https://www.theodinproject.com/lessons/foundations-axes">Foundations Course: Axes</a> - discusses the use of <code>flex-direction</code> to diplay flex content in rows vs. columns. Flex containers work in rows by default, but you can determine they work in columns, as well. When you change the direction to columns, instead of rows, the axes change. <code>align-items</code>, which works for adjusting vertical alignment with rows, adjust hortizontal alignment when set to columns. And <code>justify-content</code>, which normally works for side-to-side alignemnt in rows, adjusts vertical alignment in columns.</p>
+    <p><a href="https://www.theodinproject.com/lessons/foundations-alignment">Foundations Course: Alignment</a> - explains proper use of <code>justify-content</code> and <code>align-items</code>.</p>
     <hr>
     <h3>2023.10.05, Thursday</h3>
     <p><a href="https://www.theodinproject.com/lessons/foundations-block-and-inline">Foundations Course: Block and Inline</a> - read material and watched tutorials. Learned that I did my navigation wrong for this group of pages. Correcting now. Added <a href="../practice/boxmodel.html">Box Model</a> page to demonstrate the concept.</p>
@@ -24,7 +26,7 @@
     <ul>
         <li><code>margin: top right bottom left</code>, or</li>
         <li><code>margin-top</code>, <code>margin-right</code>, <code>margin-bottom</code>, or <code>margin-left</code></li>
-        <li>A valur of <code>auto</code> can also be used, but a set width of the element is required. This is only useful for horizontal centering.</li>
+        <li>A value of <code>auto</code> can also be used, but a set width of the element is required. This is only useful for horizontal centering.</li>
         <li>Vertical margins will overlap, or collapse, and have a total value of the larger of the two set values.</li>
     </ul>
     <p>Learned about <code>display: inline;</code> vs. <code>display: block;</code> vs. <code>display: inline-block;</code>. Updated <a href="https://mandi628.github.io/odin-recipes">Recipes Project</a>, as per assignment.</p>
