Complete FlexBox alignment lesson

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -41,6 +41,7 @@
             <li><a href="https://www.w3schools.com/html/html_blocks.asp">HTML Block & Inline Elements</a></li>
             <li><a href="https://internetingishard.netlify.app/html-and-css/flexbox/index.html">FlexBox Tutorial | HTML & CSS Is Hard</a> - GREAT tutorial on FlexBox usage</li>
             <li><a href="https://www.w3.org/TR/css-flexbox-1/#flex-common">CSS Flexible Box Layout Module Level 1</a> - very technical explanation of the flexbox usage</li>
+	    <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">CSS Tricks | A Guide to FlexBox</a></li>
         </ul>
     <h1>Other Project Sharing Services</h1>
     <p>Places to share source files, besides <a href="https://www.github.com">GitHub</a>.</p>
