Log updates from 10/8/23

--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -14,6 +14,10 @@
     <h1>My Odin Project Course Log</h1>
     <p><a href="#2023-10">October 2023</a></p>
     <h2 id="2023-10">October 2023</h2>
+    <h3>2023.10.08, Sunday</h3>
+    <p>Took a break from the screen yesterday. Today, I am redoing the exercises from the Alignment section. I still need flexbox practice, but I'm getting the hang of it. I still seem to want to automatically put everything in a div, and that's not really necessary. Once I'm done with these assignments, I will apply the flexboxes to my pages here and see if I can make them better.</p>
+    <p>Got through the first five but life interrupted in the middle of exercise #6. The Flexboxes are tripping me up, but I think I will get it with enough practice. I should go through the <a href="https://www.freecodecamp.com">freeCodeCamp</a> web design projects before proceeding with JavaScript. But I think they will go faster because these lessons have taught me a lot of the "whys" of the code, instead of just copying and pasting it from the instructions.</p>
+    <hr>
     <h3>2023.10.06, Friday</h3>
     <p><a href="https://www.theodinproject.com/lessons/foundations-introduction-to-flexbox">Foundations Course: Introduction to FlexBox</a> - played with flexboxes in my nav menu. Great tutorial on the use of flexboxes.</p>
     <p><a href="https://www.theodinproject.com/lessons/foundations-growing-and-shrinking">Foundations Course: Growing and Shrinking</a> - discusses the values of <code>flex</code>, indicated <code>flex-grow</code>, <code>flex-shrink</code>, and <code>flex-basis</code></p>
