Add log entry for today's work

--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -14,6 +14,10 @@
     <h1>My Odin Project Course Log</h1>
     <p><a href="#2023-10">October 2023</a></p>
     <h2 id="2023-10">October 2023</h2>
+    <h3>2023.10.09, Monday</h3>
+    <p>Forgot to mention yesterday that I spent a good part of the day in front of the screen trying to set up the <a href="https://www.todotxt.org">todo.txt</a> system. The script itself isn't difficult, but getting the configuration set up properly to my GoogleDrive so that I could access it from other devices was tricky. I thought I had it, then it didn't work. So I thought I had it again. Turned out my issue was in how I had entered the pathname for the files. It is correct now and working well.</p>
+    <p>Finishing the Flexbox exercises today, and hopefully starting on the final Flexbox project - <a href="https://www.theodinproject.com/lessons/foundations-landing-page">The Landing Page</a>. I want to apply the flexbox material to this and my recipes website before I forget it, so I'll be ready to start the JavaScript Basics module tomorrow.</p>
+    <hr>
     <h3>2023.10.08, Sunday</h3>
     <p>Took a break from the screen yesterday. Today, I am redoing the exercises from the Alignment section. I still need flexbox practice, but I'm getting the hang of it. I still seem to want to automatically put everything in a div, and that's not really necessary. Once I'm done with these assignments, I will apply the flexboxes to my pages here and see if I can make them better.</p>
     <p>Got through the first five but life interrupted in the middle of exercise #6. The Flexboxes are tripping me up, but I think I will get it with enough practice. I should go through the <a href="https://www.freecodecamp.com">freeCodeCamp</a> web design projects before proceeding with JavaScript. But I think they will go faster because these lessons have taught me a lot of the "whys" of the code, instead of just copying and pasting it from the instructions.</p>
