Add practice page index & update links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <a class="menu" href="pages/resources.html">Resources</a>
             <a class="menu" href="pages/git-commands.html">Git Commands</a>
             <a class="menu" href="pages/about-me.html">About Me</a>
+            <a class="menu" href="pages/practice.html">Practice Pages</a>
             <a class="menu" href="pages/course-log.html" target="_blank" rel="noopener noreferrer">My Course Log</a>
             <!-- The "target" above tells the browser to open the link in a new tab. The "rel" above gives security to it by not referencing the source page. -->
             <!-- "noopener" prevents phishing attacks. It is recommended to ALWAYS us rel="noopener noreferrer" when using the target="_blank" attribute. -->
