--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -10,9 +10,14 @@
         <a class="menu" href="resources.html">Resources</a>
         <a class="menu" href="git-commands.html">Git Commands</a>
         <a class="menu" href="about-me.html">About Me</a>
-        </nav>
+        <a class="menu" href="practice.html">Practice Pages</a>
+    </nav>
     <h1>My Odin Project Course Log</h1>
-    <p><a href="#2023-10">October 2023</a></p>
+    <ul class="toc">
+        <li>December 2023</li>
+        <li>November 2023</li>
+        <li><a href="#2023-10">October 2023</a></li>
+    </ul>
     <h2 id="2023-10">October 2023</h2>
     <h3>2023.10.09, Monday</h3>
     <p>Forgot to mention yesterday that I spent a good part of the day in front of the screen trying to set up the <a href="https://www.todotxt.org">todo.txt</a> system. The script itself isn't difficult, but getting the configuration set up properly to my GoogleDrive so that I could access it from other devices was tricky. I thought I had it, then it didn't work. So I thought I had it again. Turned out my issue was in how I had entered the pathname for the files. It is correct now and working well.</p>
