--- a/pages/practice.html
+++ b/pages/practice.html
@@ -10,7 +10,7 @@
             <a class="menu" href="resources.html">Resources</a>
             <a class="menu" href="git-commands.html">Git Commands</a>
             <a class="menu" href="about-me.html">About Me</a>
-            <a class="menu" href="practice.html">Practice Pages</a>
+            <a class="menu" href="course-log.html">Practice Pages</a>
         </nav>
     <h1>The Odin Project - Course Notes</h1>
     <p>This is my collection of notes from completing <a href="https://www.theodinproject.com">The Odin Project</a> curriculum for software development.</p>
