--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -10,6 +10,7 @@
             <a class="menu" href="resources.html">Resources</a>
             <a class="menu" href="git-commands.html">Git Commands</a>
             <a class="menu" href="about-me.html">About Me</a>
+            <a class="menu" href="practice.html">Practice Pages</a>
         </nav>
     <h1>About Me</h1>
 
