--- a/pages/resources.html
+++ b/pages/resources.html
@@ -7,9 +7,10 @@
     <body>
         <nav>
             <a class="menu" href="../index.html">Index</a>
-            <a class="menu" href="resources.html">Resources</a>
+            <a class="menu" href="course-log.html">My Course Log</a>
             <a class="menu" href="git-commands.html">Git Commands</a>
             <a class="menu" href="about-me.html">About Me</a>
+            <a class="menu" href="practice.html">Practice Pages</a>
         </nav>
     <h1>List of Resources to checkout</h1>
     <p>All resources, unless otherwise notes, are from <a href="https://www.theodinproject.com">The Odin Project</a>.</p>
