Update index & course log

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="./practice/cascade.html">Cascade Fix</a></li>
         <li><a href="./practice/boxmodel.html">The Box Model</a></li>
         <li><a href="./practice/flexbox.html">FlexBox Practice</a></li>
+        <li><a href="https://mandi628.github.io/landing-page-project/">Landing Page Project</a></li>
     </ul>
     
 </body>
