Add todo.html & update nav

--- a/pages/git-commands.html
+++ b/pages/git-commands.html
@@ -11,6 +11,7 @@
             <a class="menu" href="git-commands.html">Git Commands</a>
             <a class="menu" href="about-me.html">About Me</a>
             <a class="menu" href="practice.html">Practice Pages</a>
+            <a class="menu" href="todo.html">To Dos</a>
         </nav>
         <h1>Git Commands for Coding in the Command Line</h1>
     <ul>
