--- a/pages/practice.html
+++ b/pages/practice.html
@@ -11,6 +11,7 @@
             <a class="menu" href="git-commands.html">Git Commands</a>
             <a class="menu" href="about-me.html">About Me</a>
             <a class="menu" href="course-log.html">My Course Log</a>
+            <a class="menu" href="todo.html">To Dos</a>
         </nav>
     <h1>The Odin Project - Course Notes</h1>
     <p>This is my collection of notes from completing <a href="https://www.theodinproject.com">The Odin Project</a> curriculum for software development.</p>
