--- a/pages/resources.html
+++ b/pages/resources.html
@@ -11,6 +11,7 @@
             <a class="menu" href="git-commands.html">Git Commands</a>
             <a class="menu" href="about-me.html">About Me</a>
             <a class="menu" href="practice.html">Practice Pages</a>
+            <a class="menu" href="todo.html">To Dos</a>
         </nav>
     <h1>List of Resources to checkout</h1>
     <p>All resources, unless otherwise notes, are from <a href="https://www.theodinproject.com">The Odin Project</a>.</p>
