Work on formatting

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <!-- The "target" above tells the browser to open the link in a new tab. The "rel" above gives security to it by not referencing the source page. -->
             <!-- "noopener" prevents phishing attacks. It is recommended to ALWAYS us rel="noopener noreferrer" when using the target="_blank" attribute. -->
             <!-- Look at that! Ctrl + / make comment tags! -->
+            <a class="menu" href="pages/todo.html">To Dos</a>
             </nav>
+    <div class="container">
         <h1>The Odin Project - Course Notes</h1>
     <p>This is my collection of notes from completing <a href="https://www.theodinproject.com" target="_blank" rel="noopener noreferrer">The Odin Project</a> curriculum for software development.</p>
     <!-- A link to another website is called an absolute link. A link to a page within the same site is called a relative link. -->
@@ -30,6 +32,6 @@
         <li><a href="./practice/flexbox.html">FlexBox Practice</a></li>
         <li><a href="https://mandi628.github.io/landing-page-project/">Landing Page Project</a></li>
     </ul>
-    
+</div>
 </body>
 </html>
