--- a/pages/todo.html
+++ b/pages/todo.html
@@ -23,6 +23,7 @@
             <li>Landing page design</li>
             <li>Recipe layouts (use flex)</li>
         </ul>
+        <li>Review nav css in this site for improvements</li>
     </ul>
     <a class="menu" href="../index.html">Back to Index</a>
 </body>
