--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
             <!-- "noopener" prevents phishing attacks. It is recommended to ALWAYS us rel="noopener noreferrer" when using the target="_blank" attribute. -->
             <!-- Look at that! Ctrl + / make comment tags! -->
             <a class="menu" href="pages/todo.html">To Dos</a>
-            </nav>
+            <a class="menu" href="javascript.html">JavaScript Notes</a>
+        </nav>
     <div class="container">
         <h1>The Odin Project - Course Notes</h1>
     <p>This is my collection of notes from completing <a href="https://www.theodinproject.com" target="_blank" rel="noopener noreferrer">The Odin Project</a> curriculum for software development.</p>
     <!-- A link to another website is called an absolute link. A link to a page within the same site is called a relative link. -->
-    <p style="text-align: center">Last updated 10/9/2023.</p>
+    <p style="text-align: center">Last updated 10/12/2023.</p>
 <h2>Practice Projects</h2>
     <ul>
         <li><a href="https://mandi628.github.io/odin-recipes">Odin Recipe Project</a> - plan to update with future skills.</li>
