--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -12,6 +12,7 @@
             <a class="menu" href="about-me.html">About Me</a>
             <a class="menu" href="practice.html">Practice Pages</a>
             <a class="menu" href="todo.html">To Dos</a>
+            <a class="menu" href="javascript.html">JavaScript Notes</a>
         </nav>
     <h1>About Me</h1>
 
