--- a/pages/resources.html
+++ b/pages/resources.html
@@ -12,6 +12,7 @@
             <a class="menu" href="about-me.html">About Me</a>
             <a class="menu" href="practice.html">Practice Pages</a>
             <a class="menu" href="todo.html">To Dos</a>
+            <a class="menu" href="javascript.html">JavaScript Notes</a>
         </nav>
     <h1>List of Resources to checkout</h1>
     <p>All resources, unless otherwise notes, are from <a href="https://www.theodinproject.com">The Odin Project</a>.</p>
