--- a/pages/todo.html
+++ b/pages/todo.html
@@ -12,6 +12,7 @@
             <a class="menu" href="about-me.html">About Me</a>
             <a class="menu" href="practice.html">Practice Pages</a>
             <a class="menu" href="course-log.html">My Course Log</a>
+            <a class="menu" href="javascript.html">JavaScript Notes</a>
         </nav>
     <h1>The Odin Project - To Do</h1>
     <p>This is my collection of tasks from completing <a href="https://www.theodinproject.com">The Odin Project</a> curriculum for software development.</p>
