Complete JS Fundamentals Part 1 lesson

--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -24,6 +24,7 @@
     <h3>2023.10.12, Thursday</h3>
     <p>Tuesday was a busy day, but I did start the <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-1">Fundamentals Part 1</a> of the JavaScript Module on The Odin Project. I didn't get very far because it was late in the day.</p>
     <p>I'm making more progress with it today, and I had some inspiration last night, so I'm going to try a few things before I wrap it up for today. Here are <a href="javascript.html">my notes</a> regarding JavaScript.</p>
+    <p>Completed Fundamentals Part 1, and looking forward to <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-2">Part 2</a>, but I really should do some other things today.</p>
     <hr>
     <h3>2023.10.09, Monday</h3>
     <p>Forgot to mention yesterday that I spent a good part of the day in front of the screen trying to set up the <a href="https://www.todotxt.org">todo.txt</a> system. The script itself isn't difficult, but getting the configuration set up properly to my GoogleDrive so that I could access it from other devices was tricky. I thought I had it, then it didn't work. So I thought I had it again. Turned out my issue was in how I had entered the pathname for the files. It is correct now and working well.</p>
